--- a/packages/components-react/src/components/Button/button.module.css
+++ b/packages/components-react/src/components/Button/button.module.css
@@ -1,5 +1,6 @@
 :root {
     --cui-button-font-weight: 500;
+    --cui-button-base-font-size: var(--cui-m-font-size, 0.875rem);
 
     --cui-button-primary-background-color: var(--cui-primary-color);
     --cui-button-primary-background-color-hover: hsl(from var(--cui-primary-color) h s calc(l * 0.95));
@@ -62,20 +63,18 @@
 
 .cuiButton {
     padding: 0.75rem;
-    font-size: 0.9rem;
-    line-height: 1.5;
+    font-size: var(--cui-button-base-font-size);
     border-radius: var(--cui-default-border-radius);
     font-weight: var(--cui-button-font-weight);
+    /*Match the height*/
+    min-width: calc(2 * 0.75rem + 1lh);
+    justify-content: center;
     cursor: pointer;
     position: relative;
     border: none;
     display: inline-flex;
     align-items: center;
     box-sizing: border-box;
-
-    .cuiButtonText {
-        white-space: nowrap;
-    }
 
     &.cuiButton--loading {
         cursor: wait;
@@ -84,6 +83,7 @@
     &.cuiButton--sm {
         padding: 0.5rem 0.75rem;
         font-size: 0.8rem;
+        min-width: calc(2 * 0.5rem + 1lh);
     }
 
     .loadingContainer {
@@ -184,13 +184,25 @@
     .cuiButtonIcon {
         font-style: normal;
 
-        &.cuiButtonIcon--start {
-            margin-right: 0.5rem;
-        }
+        /*&.cuiButtonIcon--start {*/
+        /*    margin-right: 0.5rem;*/
+        /*}*/
 
-        &.cuiButtonIcon--end {
-            margin-left: 0.5rem;
-        }
+        /*&.cuiButtonIcon--end {*/
+        /*    margin-left: 0.5rem;*/
+        /*}*/
+    }
+
+    .cuiButtonText {
+        white-space: nowrap;
+    }
+
+    .cuiButtonIcon--start + .cuiButtonText {
+        margin-left: 0.5rem;
+    }
+
+    .cuiButtonText:has(~ .cuiButtonIcon--end) {
+        margin-right: 0.5rem;
     }
 
     &.cuiButton--loading .cuiButtonIcon--start, &.cuiButton--loading .cuiButtonIcon--end {
